add key image toggle button

--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -47,6 +47,14 @@
     &:hover
       .image-controls
         display: block
+    [data-behavior~='toggle-key-image']
+      position: absolute
+      font-size: 32px
+      top: 8px
+      left: 6px
+      cursor: pointer
+      &.icon-star
+        color: $yellow
     form
       input
         position: absolute
