--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -24,10 +24,10 @@
     .caption
       overflow: hidden
       float: left
-      width: $imageWidth
+      width: $imageWidth - 15px
       font-size: 14px
       clear: left
-      padding: 5px
+      padding: 5px 20px 5px 5px
       cursor: pointer
       text-overflow: ellipsis
       white-space: nowrap
@@ -52,8 +52,7 @@
         position: absolute
         bottom: 10px
         left: -10px
-        width: $imageWidth + 26px
-        padding-right: 26px
+        width: $imageWidth + 38px
       button
         margin-top: 10px
         float: right
