--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -120,7 +120,7 @@ ol#question-list
     .option-image-controls
       float: right
       position: absolute
-      top: 4px
+      top: 0
       right: 55px
       img
         width: 50px
