add a few style tweaks

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -11,6 +11,7 @@
 @import active_admin/mixins
 @import active_admin/base
 
+@import application/custom_mixins
 @import compass/css3/border-radius
 @import compass/css3/box-shadow
 
@@ -19,7 +20,6 @@
 @import twitter/bootstrap/dropdowns
 @import twitter/bootstrap/scaffolding
 @import font-awesome
-
 
 $redLight:      #e63742
 @import admin/quiz
