add key explanation image overlay

--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -21,6 +21,20 @@
       margin-bottom: 15px
       width: $imageWidth
       height: $imageHeight
+    .key-explanation
+      position: absolute
+      width: $imageWidth - 10px
+      left: 20px
+      top: 92px
+      padding: 5px
+      overflow: hidden
+      white-space: nowrap
+      text-overflow: ellipsis
+      color: $white
+      background: rgba(0, 0, 0, 0.75)
+      cursor: pointer
+      i
+        color: $grayLight
     .caption
       overflow: hidden
       float: left
