--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -9,7 +9,7 @@
 
 // Active Admin's got SASS!
 @import active_admin/mixins
-@import active_admin/base
+@import active_admin_stripped_base
 
 @import application/custom_mixins
 @import compass/css3/border-radius
@@ -19,6 +19,8 @@
 @import twitter/bootstrap/mixins
 @import twitter/bootstrap/dropdowns
 @import twitter/bootstrap/scaffolding
+@import twitter/bootstrap/popovers
+@import twitter/bootstrap/tooltip
 @import font-awesome
 
 $redLight:      #e63742
@@ -115,3 +117,4 @@ body.admin_namespace
 
 .input.hidden
   padding: 0
+
