--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -1,10 +1,15 @@
-
 #image-uploader
   $imageWidth: 150px
   $imageHeight: 100px
 
   #image-list
     float: left
+
+  #key-explanation
+    textarea
+      width: 185px
+      height: 50px
+      resize: none
 
   .image
     margin: 10px
