--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -29,7 +29,7 @@ $yellow:                #ffc40d;
 $orange:                #f89406;
 $pink:                  #c3325f;
 $purple:                #7a43b6;
-$brick:                 #AA420D;
+$brick:                 #D15129;
 $brickLight:            #FFBC99;
 $brickDark:             #803B0C;
 $beige:                 #c9bca6;
@@ -49,7 +49,7 @@ $linkColorHover:        $brickDark;
 // Typography
 // -------------------------
 $sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
-$serifFontFamily:       Georgia, "Times New Roman", Times, serif;
+$serifFontFamily:       "EB Garamond", Garamond, Georgia, "Times New Roman", Times, serif;
 $monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
 $baseFontSize:          16px;
