--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -35,9 +35,8 @@ p
     margin-top: 2.4em
 
 .hero-well
-  background: whiteSmoke
+  background: $white
   padding: 20px 0
-  border-top: 1px solid $grayLight
   border-bottom: 1px solid $grayLight
 
 .hero-comments
