--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -1,7 +1,7 @@
 @import compass/css3/transition
 
 =authentication-nav
-  .global-navigation li.authentication
+  li.authentication
     +font-serif-tiny
     margin-top: 20px
     border: none
@@ -25,28 +25,21 @@
 
 .navbar
   margin-bottom: 0
+  display: inline
 
 .navbar .brand
   padding: 10px 0 0 0
-
-.brand-byline
-  clear: left
-  margin-left: 167px
-  line-height: 20px
-  +font-sans-tiny
-  font-size: 11px
-  font-style: italic
-  padding-top: 10px
-
-.delve-brand img
-  display: inline-block
-  margin: -10px 0 0 5px
 
 .navbar .navbar-inner
   background: white
   filter: none
   +box-shadow(none)
   border: 0
+  display: inline
+
+.navbar .nav
+  float: none
+  display: inline
 
 .navbar .nav > li > a
   color: $brick
@@ -57,32 +50,30 @@
   background: none
   color: #111
 
-.navbar .addthis-container
-  margin-top: 10px
+.subscribe form
+  margin-bottom: 8px
+  margin-top: 9px
 
-.addthis_toolbox
-  a
-    margin-left: 5px
-    &.addthis_button_google_plusone
-      margin-left: -3px
+.brand-container
+  display: inline
+  float: left
+  margin-left: 18px
 
 .global-navigation
   +font-serif-large
   color: $black
-  margin-bottom: 10px
+  margin-bottom: 0px
   ul.nav
     margin-top: 20px
     padding-bottom: 5px
     margin-bottom: 5px
   li
-    margin: 0
-    border-right: 1px dotted $black
+    margin: 8px 0 0 0
     padding: 10px 30px
     text-align: center
     line-height: 19px
 
     &.last, &:last-child
-      border-right: none
       padding-right: 0
 
   i[class^="icon-"]
