--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,20 +1,17 @@
 #header
-  .container.noprint
-    .navbar
-      .navbar-inner
-        .nav.pull-right.addthis-container
-          = render 'layouts/share_this' unless Rails.env.test?
-  .container.global-navigation
-    .navbar
-      .navbar-inner
-        .container
-          .nav.brand-container
-            %a.brand{href: root_url, target: '_top'}
-              = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
-            .brand-byline
-              brought to you by
-              %a.delve-brand{href: 'http://delvekitchen.com', target: '_top'}
-                = image_tag('delve-logo.png', alt: 'Delve')
-          %ul.nav.pull-right.noprint
+  .row.sign-in
+    .span6.pull-right
+      #authentication
+  .row.global-navigation
+    .span12
+      .brand-container
+        %a.brand{href: root_url, target: '_top'}
+          = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
+      .navbar
+        .navbar-inner
+          %ul.nav.noprint
             = render 'layouts/global_navigation'
+      - unless user_signed_in?
+        .title-bar.pull-right.noprint
+          = render 'mailing_list/subscribe', orange: true
 
