--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -111,6 +111,8 @@
     -# :javascript
       try{Typekit.load();}catch(e){}
 
+    %link{href: 'http://fonts.googleapis.com/css?family=EB+Garamond', rel: 'stylesheet', type: 'text/css'}
+
     -# Modernizr
 
     -# %script{:src => "/js/libs/modernizr.custom.js"}
@@ -124,7 +126,7 @@
     -# Content
     -# ==========================================================================
 
-    #main-container
+    #main-container.container
       = render 'layouts/header'
       = render 'layouts/title_bar'
       = yield
