--- a/app/assets/stylesheets/application/quizzes/_results.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_results.css.sass
@@ -30,59 +30,16 @@
   .column-label
     text-align: center
 
-  .multiple-choice-results
-    .bordered.top, .bordered-bottom
-      border-width: 0
 
-    &:last-child
-      border-bottom: none
+  .count, .type
+    +font-serif-small
 
-    [class*='span']:first-child
-      margin-top: 30px
-      margin-bottom: 20px
+  .type
+    color: $grayMedium
 
-    span
-      +font-serif-small
-      color: $grayMedium
-      &.count
-        color: $brick
-    ol
-      +font-sans-small
-      margin-top: 15px
-      margin-left: 45px
-      list-style-type: upper-alpha
-    li
-      padding: 5px 0
+  .count
+    color: $brick
 
-    .label
-      +font-serif-large
-      font-weight: normal
-      padding: 0.5em 1.5em
-      text-align: center
-      display: block
-      margin: 0 auto
-      width: 10px
-
-    .label.correct
-      background: $green
-      color: $white
-
-    .label.incorrect
-      background: $red
-      color: $white
-
-    .label.default
-      color: $black
-
-    .average
-      +font-serif-large
-      color: $brick
-      text-align: center
-      margin-top: 0
-
-    .result-column
-      width: 100%
-      height: 100%
-      display: table
-      overflow: hidden
+  @import application/quizzes/box_sort_result
+  @import application/quizzes/multiple_choice_result
 
