--- a/app/views/quizzes/results.html.haml
+++ b/app/views/quizzes/results.html.haml
@@ -8,5 +8,5 @@
 
 #quiz-results.container
   = render 'quizzes/box_sort_question_result'
-  -# = render 'quizzes/multiple_choice_question_results', multiple_choice_results: quiz_results
+  = render 'quizzes/multiple_choice_question_results', multiple_choice_results: quiz_results
 
