--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -161,6 +161,12 @@
       .average
         +font-serif-tiny
         line-height: 30px
+    .box-sort-result
+      h4
+        display: none
+      .key-image-information
+        span
+          display: none
 
   .box-sort
     .images
