fix aspect ratio for images

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -17,6 +17,8 @@
         height: 95px
     img.ui-draggable-dragging
       height: 124px
+    .image-pile img
+      height: 124px
 
 /* Portrait tablet*/
 @media (max-width: 980px)
@@ -67,6 +69,8 @@
         width: 112px
         height: 75px
     img.ui-draggable-dragging
+      height: 96px
+    .image-pile img
       height: 96px
 
 /* Landscape phone to portrait tablet */
@@ -169,7 +173,7 @@
   .box-sort
     .images
       height: 160px
-    label, .sort-option
+    label, .sort-option, .image-pile img
       width: 219px
 
 /* Android phone. Weird inbetween*/
