--- a/app/views/mailing_list/_subscribe.html.haml
+++ b/app/views/mailing_list/_subscribe.html.haml
@@ -2,7 +2,7 @@
 .subscribe.pull-right{ class: ('orange' if orange)  }
   = form_tag "http://www.aweber.com/scripts/addlead.pl" do
     .input-append
-      = email_field_tag('email', nil, {class: 'span4', placeholder: 'Enter your email for updates', required: true})
+      = email_field_tag('email', nil, {class: 'span4', placeholder: 'Enter your email for ChefSteps updates', required: true})
       %input{ type: "hidden", name: "listname", value: 'cs_c_sousvide'}
       %input{ type: "hidden", name: "meta_adtracking", value: 'site_top_form'}
       %input{ type: "hidden", name: "redirect", value: thank_you_subscribing_url}
