--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -1,5 +1,5 @@
 .signup-banner
-  margin-bottom: 0
+  margin-bottom: 16px
   h2, h3
     line-height: 1em
   h2
@@ -8,7 +8,8 @@
     +font-sans-medium
     color: $brickLight
   .button
-    margin-top: 8px
+    margin-right: -28px
+    margin-top: 3px
   &.gray
     h3
       color: $grayDark
@@ -37,4 +38,5 @@
   margin-top: 0px
   margin-bottom: 0
   padding-top: 0px
+  padding-bottom: 3px
 
