--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,9 +12,9 @@
     .container
       .row
         .span6
-          %h2 Master sous vide cooking
-          %h3 in our first free-to-learn cooking course
-        .span.pull-right
+          %h2 ChefSteps is building the free-to-learn culinary school.
+          %h3 Master sous vide cooking in our first course.
+        .span.pull-right.preview-course-button
           %a.button{ href: course_path('accelerated-sous-vide-cooking-course') }
             .inner
               Preview Course
