--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -31,6 +31,7 @@
 @import application/quizzes/question
 @import application/quizzes/results
 @import application/user_profiles/show
+@import application/user_profiles/user_profile_info
 
 @import application/users/forms
 
