drive box sort options from data

--- a/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
@@ -12,6 +12,8 @@
       background: $green
     &.incorrect
       background: $red
+    &.ambivalent
+      background: $grayMedium
 
   .option-label
     float: left
