show results with correct order number displayed

--- a/app/views/quizzes/_box_sort_question_result.html.haml
+++ b/app/views/quizzes/_box_sort_question_result.html.haml
@@ -1,6 +1,6 @@
 .row.box-sort-result
   .span12
-    %span.count [index] <i>of</i> [total count]
+    %span.count #{result[:order]} <i>of</i> #{quiz_results.count}
     %span.type Memorable snapshots
     %h4 [Instructions]
 .row.box-sort-result
