add meaningful labels to each section

--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -1,7 +1,7 @@
 .results-header.row
   .span6
     .center
-      Questions:
+      Multiple Choice Questions:
   .span4
     .center.bordered.right.left
       Your Answer:
