comment back out the intro text

--- a/app/views/user_profiles/_profile_intro.html.haml
+++ b/app/views/user_profiles/_profile_intro.html.haml
@@ -5,14 +5,14 @@
       - if show_encourage
         :markdown
           #{encourage_profile.copy.to_s}
-      - else
-        %p= "Welcome back, #{user.name}!"
-        %p
-          parel gastropub cliche pop-up occaecat, consequat viral brooklyn you
-          probably haven't heard of them cupidatat cillum scenester DIY labore.
-          Anim truffaut in trust fund, swag banksy photo booth typewriter.
-          Bushwick pinterest hella proident cupidatat echo park, quinoa fixie
-          wolf blog leggings labore ea kogi gastropub.
+      -# - else
+      -#   %p= "Welcome back, #{user.name}!"
+      -#   %p
+      -#     parel gastropub cliche pop-up occaecat, consequat viral brooklyn you
+      -#     probably haven't heard of them cupidatat cillum scenester DIY labore.
+      -#     Anim truffaut in trust fund, swag banksy photo booth typewriter.
+      -#     Bushwick pinterest hella proident cupidatat echo park, quinoa fixie
+      -#     wolf blog leggings labore ea kogi gastropub.
 
   - unless show_encourage
     -# .row
