--- a/app/views/quizzes/_box_sort_question_key_image.html.haml
+++ b/app/views/quizzes/_box_sort_question_key_image.html.haml
@@ -1,8 +1,6 @@
 .span4
-  %img.key-image{src: 'http://lorempixel.com/400/250/food/', class: (correct ? 'correct' : 'incorrect')}
+  %img.key-image{src: image[:url], class: (correct ? 'correct' : 'incorrect')}
   .key-image-information
     %span This is a key image, because:
-    %p
-      de bushwick do occupy retro narwhal. Vero VHS dolor, lomo labore
-      american apparel butcher cupidatat kogi. Banh mi bushwick officia, etsy
+    %p= image[:key_explanation]
 
