format key image display class correctly

--- a/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
@@ -28,6 +28,8 @@
       border-color: $green
     &.incorrect
       border-color: $red
+    &.ambivalent
+      border-color: $grayMedium
 
   .key-image-information
     padding: 20px 10px
