--- a/app/views/quizzes/_box_sort_question_result.html.haml
+++ b/app/views/quizzes/_box_sort_question_result.html.haml
@@ -14,5 +14,5 @@
 
 .row.box-sort-result
   - result[:key_images].each do |image|
-    = render 'quizzes/box_sort_question_key_image', image: image, correct: true
+    = render 'quizzes/box_sort_question_key_image', image: image
 
