--- a/app/assets/stylesheets/application/user_profiles/_user_profile_info.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/_user_profile_info.css.sass
@@ -39,6 +39,9 @@
       margin: 0
       margin-bottom: 30px
       color: $brick
+      img
+        width: 100%
+        height: 230px
       span
         color: $gray
     figcaption
