--- a/app/views/user_profiles/_profile_quiz_info_card.html.haml
+++ b/app/views/user_profiles/_profile_quiz_info_card.html.haml
@@ -3,5 +3,5 @@
     %img{ src: quiz.image.url }
   %figcaption
     %h5= quiz.title
-    %span= "#{quiz.questions_remaining_for_count(current_user)} of #{quiz.question_count} Questions Remaining"
+    %span= "#{quiz.questions_remaining_for_count(current_user)} of #{quiz.question_count} #{"Question".pluralize(quiz.question_count)} Remaining"
 
