add link to quiz in progress to resume

--- a/app/assets/stylesheets/application/user_profiles/_user_profile_info.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/_user_profile_info.css.sass
@@ -35,6 +35,8 @@
       i
         color: $gray
         font-size: 20px
+    a
+      text-decoration: none
     figure
       margin: 0
       margin-bottom: 30px
