maximize image size for box sort

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -49,7 +49,7 @@
 .box-sort
   .images
     margin-bottom: 25px
-    height: 160px
+    height: 350px
     [class*='span']
       margin: 0 auto 10px
       float: none
@@ -107,8 +107,8 @@
     color: $brick
 
   img.ui-draggable-dragging
-    width: 270px
-    height: 152px
+    width: 270px !important
+    height: 152px !important
     cursor: pointer
     position: absolute
     padding: 6px
@@ -117,8 +117,8 @@
     position: relative
 
     img
-      width: 270px
-      height: 152px
+      width: 570px
+      height: 322px
       cursor: pointer
       position: absolute
       padding: 6px
