show completed quizzes and hide if empty

--- a/app/assets/stylesheets/application/user_profiles/_user_profile_info.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/_user_profile_info.css.sass
@@ -22,6 +22,8 @@
       font-size: 48px
 
 .user-profile-info
+  .horizontal-divider
+    margin-bottom: 20px
   .info-set
     padding-top: 30px
     background: whiteSmoke
@@ -43,7 +45,7 @@
       color: $brick
       img
         width: 100%
-        height: 230px
+        height: 210px
       span
         color: $gray
     figcaption
