--- a/app/views/user_profiles/_profile_quiz_info.html.haml
+++ b/app/views/user_profiles/_profile_quiz_info.html.haml
@@ -5,14 +5,29 @@
 
 .row
   .span8.info-set
-    .row
-      .span8
-        %span.section-label
-          %i.icon-trophy
-          Quizzes In Progress
-    - started_quizzes.in_groups_of(2, false) do |quizzes|
+    - if started_quizzes.count > 0
       .row
-        - quizzes.each do |quiz|
-          .span4
-            = render 'profile_quiz_info_card', quiz: quiz
+        .span8
+          %span.section-label
+            %i.icon-trophy
+            Quizzes In Progress
+      - started_quizzes.in_groups_of(2, false) do |quizzes|
+        .row
+          - quizzes.each do |quiz|
+            .span4
+              = render 'profile_quiz_info_card', quiz: quiz
+      - if completed_quizzes.count > 0 && started_quizzes.count > 0
+        .row
+          .span8.horizontal-divider
+    - if completed_quizzes.count > 0
+      .row
+        .span8
+          %span.section-label
+            %i.icon-trophy
+            Quizzes Completed
+      - completed_quizzes.in_groups_of(2, false) do |quizzes|
+        .row
+          - quizzes.each do |quiz|
+            .span4
+              = render 'profile_quiz_info_card', quiz: quiz
 
