--- a/app/views/user_profiles/_profile_quiz_info_card.html.haml
+++ b/app/views/user_profiles/_profile_quiz_info_card.html.haml
@@ -1,8 +1,9 @@
 = link_to quiz_path(quiz) do
   %figure.img-polaroid
     - if quiz.image?
-      %img{ src: quiz.image.url }
+      = filepicker_image_tag quiz.image.url, w: 230, h: 210, fit: 'crop'
     %figcaption
       %h5= quiz.title
-      %span= "#{quiz.questions_remaining_for_count(current_user)} of #{quiz.question_count} #{"Question".pluralize(quiz.question_count)} Remaining"
+      - unless quiz.completed_by?(current_user)
+        %span= "#{quiz.questions_remaining_for_count(current_user)} of #{quiz.question_count} #{"Question".pluralize(quiz.question_count)} Remaining"
 
