use has_image? helper method
Guards against case where image is defined, but image.url is not.

--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -11,7 +11,7 @@
             .span4
               = link_to quiz_path(quiz) do
                 .image-with-caption
-                  - if quiz.image
+                  - if quiz.has_image?
                     = image_tag quiz.image.url, class: 'img-polaroid'
                   .image-caption
                     .image-caption-text= quiz.title
