--- a/app/views/user_profiles/_profile_quiz_info_card.html.haml
+++ b/app/views/user_profiles/_profile_quiz_info_card.html.haml
@@ -1,6 +1,6 @@
 = link_to quiz_path(quiz) do
   %figure.img-polaroid
-    - if quiz.image?
+    - if quiz.has_image?
       = filepicker_image_tag quiz.image.url, w: 230, h: 210, fit: 'crop'
     %figcaption
       %h5= quiz.title
