change tab copy to "Quiz"

--- a/app/views/user_profiles/_profile_quiz_info.html.haml
+++ b/app/views/user_profiles/_profile_quiz_info.html.haml
@@ -1,7 +1,7 @@
 .row
   .span2.info-box.active
     %span.count= quiz_count
-    %span= "Course".pluralize(quiz_count)
+    %span= "Quiz".pluralize(quiz_count)
 
 .row
   .span8.info-set
