fix result label to center variable width text

--- a/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
@@ -19,11 +19,12 @@
   .label
     +font-serif-large
     font-weight: normal
-    padding: 0.5em 1.5em
     text-align: center
     display: block
     margin: 0 auto
-    width: 10px
+    width: 62px
+    height: 28px
+    line-height: 28px
 
   .label.correct
     background: $green
