--- a/app/views/quizzes/_box_sort_question_result.html.haml
+++ b/app/views/quizzes/_box_sort_question_result.html.haml
@@ -1,7 +1,7 @@
 .row.box-sort-result
   .span12
+    %span.type Question
     %span.count #{result[:order]} <i>of</i> #{quiz_results.count}
-    %span.type Memorable snapshots
     %h4!= result[:instructions]
 .row.box-sort-result
   .span12
