--- a/app/views/quizzes/_multiple_choice_question_result.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_result.html.haml
@@ -1,7 +1,7 @@
 .row.multiple-choice-results.bordered.bottom
   .span6
+    %span.type Question
     %span.count #{result[:order]} <i>of</i> #{quiz_results.count}
-    %span.type Multiple choice question
     %h4= result[:question]
     %ol
       - result[:options].each do |option|
