--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -63,6 +63,9 @@
       margin-left: 122px
       width: 90px
 
+  .question .option img
+    max-width: 120px
+
   .box-sort
     .images
       height: 100px
