--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -32,9 +32,13 @@
       +border-radius(0)
 
 .hero-step-by-step
-  margin-top: 3.2em
+  margin-top: 0px
   padding-bottom: 20px
   margin-bottom: 0
+  .container
+    margin-top: 0px
+    .step_title
+      font-size: 24px
 
 .step-directions
   line-height: 1.6em
