--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -31,6 +31,7 @@ p, body, .step-directions li, table.ingredients, .hero-unit
 .hero-unit.hero-well.hero-step-by-step
   border: none
   padding-top: 0px
+  maring-top: 0px
 
 .hero-unit
   font-weight: normal
