--- a/app/views/admin/courses/_form.html.haml
+++ b/app/views/admin/courses/_form.html.haml
@@ -6,6 +6,14 @@
     = f.input :title
     = f.input :description, label: "Description (Markdown or HTML)"
 
+  = section("Activities", f) do
+    = sortable_table('activities') do
+      %tr
+        %th
+        - course.activities.each do |activity|
+          %li= link_to activity.title, admin_activity_path(activity)
+
+
   = f.actions do
     = f.action :submit
     = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel'
