--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -120,6 +120,9 @@
     :erb
       <script type="text/javascript">var switchTo5x=false;</script>
 
+    -# Google Translate
+    %meta{:name => "google-translate-customization", :content => "d64492c5d22d7921-60170f9c9b7267c6-g7179c5f7a7e64573-d"}
+
   %body{ data: body_data }
 
     -# ==========================================================================
