--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -169,6 +169,7 @@ iframe
   padding-bottom: 56.25%
   height: 0
   overflow: hidden
+  z-index: 999
 
   iframe, object, embed
     position: absolute
