Google translate widget now looks integrated into the site

--- a/app/assets/stylesheets/application/_navigation.css.sass
+++ b/app/assets/stylesheets/application/_navigation.css.sass
@@ -15,7 +15,7 @@
     color: $white
     .navbar-activity-title
       .navbar-text
-        width: 200px
+        width: 180px
   .navbar .nav > li > a
     padding: 10px
     color: $white
@@ -52,3 +52,6 @@
   .disabled
     &:before
       color: $brickDark
+
+.goog-te-banner-frame
+  display: none
