--- a/app/assets/stylesheets/application/quizzes/_results.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_results.css.sass
@@ -31,14 +31,9 @@
     text-align: center
 
 
-  .count, .type
+  .count, .type, .student-average
     +font-serif-small
-
-  .type
     color: $grayMedium
-
-  .count
-    color: $brick
 
   @import application/quizzes/box_sort_result
   @import application/quizzes/multiple_choice_result
