--- a/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
@@ -19,19 +19,19 @@
   li
     padding: 5px 0
 
-  li.right-answer, li.wrong-answer
+  li.status_right, li.status_wrong
     &:before
       margin-left: -43px
       margin-right: 26px
       font-size: 1.5em
       font-weight: bold
 
-  li.right-answer
+  li.status_right
     &:before
       content: "\2713"
       color: $green
 
-  li.wrong-answer
+  li.status_wrong
     &:before
       content: "\2716"
       color: $red
